feat: per-level capacity in hierarchical rate limiter, wire it in